# Robotex2018-localization

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration/: calibration_realsense_live.py  pose_estimation_test_cam.py
launch/: loc.launch
localization/: localization_tester.py  localize.py  localizer.py  map.py  realsense_loc_test.py
msg/: BasketAngle.msg
src/: localizer.py  odom_broadcaster.cpp
src/calibration/: calibration-laptop.yml  calibration-realsense-1920-1080.yml  calibration-realsense-640-480.yml  calibration-rs-480-640.yml  charucoBoardCalibrationLive.py  pose_estimation_test_cam.py
src/localization_src/: localizer.py  map.py
